--- a/dependencies.conf
+++ b/dependencies.conf
@@ -16,3 +16,43 @@ install_gmsh() {
    cp -r gmsh-${GMSH_VER}-Linux64/share/* /usr/local/share/
    cp gmsh-${GMSH_VER}-Linux64/bin/* /usr/local/bin
 }
+
+pull_ipopt () {
+    echo "FENICS-BUILDER: Updating ipopt..."
+    cd $SRC_DIR
+    rm -fR ipopt
+    mkdir ipopt
+    cd ipopt
+    curl -O https://www.coin-or.org/download/source/Ipopt/Ipopt-${IPOPT_VER}.tgz
+    tar -xvf Ipopt-${IPOPT_VER}.tgz
+    cd Ipopt-$IPOPT_VER
+    cd ThirdParty/Metis
+    ./get.Metis
+}
+
+build_ipopt () {
+    echo "FENICS-BUILDER: Building ipopt..."
+    # install ipopt with metis and mumps, still need HSL :
+    cd $SRC_DIR/ipopt/Ipopt-$IPOPT_VER
+
+    # Fix compilation for parallel MPI versions
+    sed -i "s/#define MPI_COMM_WORLD IPOPT_MPI_COMM_WORLD//g" Ipopt/src/Algorithm/LinearSolvers/IpMumpsSolverInterface.cpp
+    sed -i "s/MPI_COMM_WORLD/MPI_COMM_SELF/g" Ipopt/src/Algorithm/LinearSolvers/IpMumpsSolverInterface.cpp
+
+    ./configure --with-blas="-lblas -llapack" --with-lapack="-llapack" --prefix="${FENICS_PREFIX}"  --enable-debug --enable-shared --with-mumps-incdir="/usr/local/petsc-32/include  -I/usr/include/mpi" --with-mumps-lib="/usr/local/petsc-32/lib"
+    make install
+}
+update_ipopt () {
+    pull_ipopt
+    build_ipopt
+}
+update_pyipopt () {
+    cd $SRC_DIR
+    git clone https://github.com/pf4d/pyipopt.git
+    cd pyipopt
+    sed -i "s#/usr/local#${FENICS_PREFIX}#g" setup.py
+    sed -i "s/coinmumps/dmumps/g" setup.py
+    sed -i "s#library_dirs=\[IPOPT_LIB\]#library_dirs=[IPOPT_LIB,'/usr/local/petsc-32/lib']#g" setup.py
+    python${FENICS_PYTHON_MAJOR_VERSION} setup.py build
+    python${FENICS_PYTHON_MAJOR_VERSION} setup.py install --prefix="${FENICS_PREFIX}"
+}
